--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,10 +6,11 @@ $violet: #3019b2;
 $light-gray: #9f9f9f;
 $dark-gray: #3f3f40;
 $white: #ffffff;
-$black: #3f3f40;
+$black: #3b3b3b;
 $border: #f0f0f0;
 $search: #f6f5f2;
 $bg-card: #f4f4f4;
+$divider: #dedede;
 
 //fonte principal
 $font-primary: 'Poppins', sans-serif;
