--- a/src/components/atoms/buttons/Buttons.scss
+++ b/src/components/atoms/buttons/Buttons.scss
@@ -44,4 +44,18 @@
     letter-spacing: 1.28px;
     text-transform: uppercase;
   }
+  &--news {
+    background-color: $yellow;
+    color: $purple;
+    height: 42px;
+    width: 157px;
+    text-transform: uppercase;
+    border-radius: 5px;
+    flex-shrink: 0;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    border: none;
+    line-height: 12px;
+  }
 }
