--- a/src/components/molecules/cards/productCard/ProductCard.scss
+++ b/src/components/molecules/cards/productCard/ProductCard.scss
@@ -20,6 +20,7 @@
   &__image {
     display: flex;
     justify-content: center;
+    flex-shrink: 0;
     img {
       width: 278.104px;
       height: 228px;
@@ -33,19 +34,48 @@
     flex-direction: column;
     flex: 1;
     width: 100%;
+    min-height: 0;
+    justify-content: space-between;
 
     .texts {
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 4px;
       flex: 1;
-      padding-top: 8px;
+      padding-top: 12px;
+      min-height: 0;
     }
 
     .button {
       display: flex;
       justify-content: center;
-      margin-top: auto;
+      margin-top: 16px;
+      flex-shrink: 0;
     }
+  }
+
+  &__title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    max-height: 3em;
+    line-height: 1.4em;
+    min-height: 2.8em;
+    margin-bottom: 2px;
+  }
+
+  &__description {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    max-height: 3em;
+    line-height: 1.4em;
+    min-height: 2.8em;
   }
 }
