projeto finalizado de fato

--- a/src/components/organisms/categories/Categories.scss
+++ b/src/components/organisms/categories/Categories.scss
@@ -14,7 +14,7 @@
     gap: 22px;
 
     &.default {
-      background-color: $bg-card; // cinza claro
+      background-color: $bg-card;
     }
 
     &.tecnologia {
