--- a/src/components/atoms/input/Input.scss
+++ b/src/components/atoms/input/Input.scss
@@ -3,6 +3,45 @@
 .input-wrapper {
   position: relative;
   display: flex;
+  align-items: center;
+
+  &--quantity {
+    display: flex;
+    align-items: center;
+    font-family: $font-primary;
+    width: 110px;
+    border: 1px solid #e7e7e7;
+    border-radius: 8px;
+    overflow: hidden;
+
+    .input-field {
+      width: 50%;
+      text-align: center;
+      border: none;
+      font-size: 14px;
+      font-weight: 500;
+      background-color: #fff;
+      height: 40px;
+    }
+
+    .quantity-btn {
+      width: 25%;
+      border: none;
+      background-color: $white;
+      color: $black;
+      font-size: 18px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 40px;
+
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+  }
+
   &--icon {
     .input-field {
       padding-left: 1rem;
@@ -36,6 +75,7 @@
       pointer-events: none;
     }
   }
+
   &--plain {
     .input-field {
       font-family: $font-primary;
